--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "body-parser": "^1.20.2",
+    "bullmq": "^5.66.4",
     "chrono-node": "^2.8.2",
     "connect-mongo": "^5.0.0",
     "date-fns": "^2.30.0",
@@ -25,6 +26,7 @@
     "i18next": "^22.4.7",
     "i18next-fs-backend": "^2.1.8",
     "i18next-http-middleware": "^3.7.4",
+    "ioredis": "^5.8.2",
     "mongodb": "^6.17.0",
     "mongoose": "^7.2.0",
     "node-cron": "^4.0.4",
