--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^7.2.0",
     "node-cron": "^4.0.4",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rrule": "^2.8.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
